oct-1931: footer-content gap fix

--- a/client/src/components/Metrics/MetricsGeneral/MetricsGeneral.module.scss
+++ b/client/src/components/Metrics/MetricsGeneral/MetricsGeneral.module.scss
@@ -1,10 +1,5 @@
 .root {
   width: 100%;
-  padding-bottom: 4rem;
-
-  @media #{$large-desktop-up} {
-    padding-bottom: 5.6rem;
-  }
 }
 
 .divider {
